[package]
name = "primidi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenvy = "0.15.7"
eggbug = "0.1.3"
reqwest = { version = "0.11.18", features = ["blocking"] }
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
